Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 2.0.0:
	Build Changes:
	* With the Core/UI split completed, it is now possible to build Gaim
	  without any UIs, creating a libgaim library upon which other UIs
	  may be constructed
	* A new ncurses-based console UI called gaim-text is now available
	  (Sadrul Habib Chowdhury, Google Summer of Code)
	* Reorganized the source tree to split apart the code for the UI
	  changes and libgaim targets
	* libxml2 is now required.  We switched from gmarkup to libxml2 for
	  more correct XML parsing.

	Status System:
	* The code dealing with buddy and account status, away messages,
	  away states, online/offline, etc has been completely rewritten.
	  Huge thanks to Christian Hammond, Dave West, Daniel Atallah and
	  Sadrul Habib Chowdhury.
	* Your status can now be set from inside the buddy list using the
	  selector at the bottom of the window.
	* To see messages when a buddy signs on or off, goes away, or
	  becomes idle, load the "Buddy State Notification" plugin

	Buddy List:
	* Performance when manipulating and displaying the buddy list has
	  been significantly improved (Aaron Sheldon, Google Summer of Code)
	* Buddy icons are now shown in tooltips (Felipe Contreras)
	* Tooltips now contain additional information about a "Person" that
	  contains multiple online buddies
	* Added a "Last Seen" field to buddy tooltips
	* Contacts will auto-expand when buddies are dragged around
	* If Gaim is exited with the buddy list hidden in the docklet, it
	  will remain hidden when Gaim is started again (Scott Shedden)
	* Improved buddy list searching with CTRL+F
	* Ability to set a buddy icon for all of your accounts at once via
	  the buddy list (You can still set per-account icons via the
	  account editor)
	* The space wasted by the group expanders has been eliminated and
	  the expander setting in .gtkrc-2.0 is no longer needed
	* Authorization requests don't popup new dialogs any more. They are